@@ -1,3 +1,6 @@
+Changelog 0.3.19 [20230208]:
+- Subtitles turn on automatically for subs and off for dubs
+
 Changelog 0.3.18 [20230208]:
 - Fixed a small bug that is hardcoded.
 
